# MyFDTD

./: .gitignore  1D-Mur.ipynb  1D-PML.ipynb  1D.ipynb  2D-Mur.ipynb  README.md  main.ipynb
gui/: App.cpp  CMakeLists.txt  Frame.cpp  Frame.hpp  GUI.cpp  gui.cpp
